--- a/khalifa-community/index.html
+++ b/khalifa-community/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
-</html>
+    <head>
+
+      <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i" rel="stylesheet">
+      <!-- Styles -->
+  
+      <link href="assets/css/styles.css" rel="stylesheet">
+      <link href="assets/css/all.css" rel="stylesheet">
+      <script type="module" src="/src/main.js"></script>
+    </head>
+    <body id="app">
+
+    </body>
